--- a/style.css
+++ b/style.css
@@ -1,7 +1,60 @@
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap");
+
+:root {
+  --grayish-blue: hsl(217, 19%, 38%);
+  --dark-grayish-blue: hsl(217, 19%, 24%);
+  --dark-blue: hsl(218, 23%, 16%);
+  --light-cyan: hsl(193, 38%, 86%);
+  --neon-green: hsl(150, 100%, 66%);
+}
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+body {
+  font-family: "Manrope", sans-serif;
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  background-color: var(--dark-blue);
+}
+
+/* Advice Container */
+.advice-container {
+  height: 320px;
+  width: 350px;
+  background-color: var(--dark-grayish-blue);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
+}
+.advice-number {
+  color: var(--neon-green);
+  font-size: 0.7rem;
+  letter-spacing: 5px;
+  margin: 2.5rem 0 1.8rem 0;
+}
+.advice-quote {
+  font-size: 1.5rem;
+  text-align: center;
+  width: 80%;
+  margin-bottom: 1.5rem;
+  color: var(--light-cyan);
+}
+
+/* Dice Image */
+.dice-container {
+  display: grid;
+  place-items: center;
+  background-color: var(--neon-green);
+  height: 65px;
+  width: 65px;
+  border-radius: 50%;
+  position: relative;
+  top: 30px;
 }
